// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter prop 1`] = `
<div class="win-picker">
  <div class="win-picker__toolbar"><button type="button" class="win-picker__cancel">取消</button><button type="button" class="win-picker__confirm">确认</button></div>
  <!---->
  <div class="win-picker__columns" style="height: 220px;">
    <div class="win-picker-column">
      <ul class="win-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="win-picker-column__item win-picker-column__item--selected" style="height: 44px;">
          <div class="win-ellipsis">00</div>
        </li>
        <li role="button" tabindex="0" class="win-picker-column__item" style="height: 44px;">
          <div class="win-ellipsis">05</div>
        </li>
        <li role="button" tabindex="0" class="win-picker-column__item" style="height: 44px;">
          <div class="win-ellipsis">10</div>
        </li>
        <li role="button" tabindex="0" class="win-picker-column__item" style="height: 44px;">
          <div class="win-ellipsis">15</div>
        </li>
        <li role="button" tabindex="0" class="win-picker-column__item" style="height: 44px;">
          <div class="win-ellipsis">20</div>
        </li>
      </ul>
    </div>
    <div class="win-picker-column">
      <ul class="win-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="win-picker-column__item win-picker-column__item--selected" style="height: 44px;">
          <div class="win-ellipsis">00</div>
        </li>
        <li role="button" tabindex="0" class="win-picker-column__item" style="height: 44px;">
          <div class="win-ellipsis">10</div>
        </li>
        <li role="button" tabindex="0" class="win-picker-column__item" style="height: 44px;">
          <div class="win-ellipsis">20</div>
        </li>
        <li role="button" tabindex="0" class="win-picker-column__item" style="height: 44px;">
          <div class="win-ellipsis">30</div>
        </li>
        <li role="button" tabindex="0" class="win-picker-column__item" style="height: 44px;">
          <div class="win-ellipsis">40</div>
        </li>
        <li role="button" tabindex="0" class="win-picker-column__item" style="height: 44px;">
          <div class="win-ellipsis">50</div>
        </li>
      </ul>
    </div>
    <div class="win-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="win-hairline-unset--top-bottom win-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`format initial value 1`] = `
<div class="win-picker">
  <div class="win-picker__toolbar"><button type="button" class="win-picker__cancel">取消</button><button type="button" class="win-picker__confirm">确认</button></div>
  <!---->
  <div class="win-picker__columns" style="height: 220px;">
    <div class="win-picker-column">
      <ul class="win-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="win-picker-column__item win-picker-column__item--selected" style="height: 44px;">
          <div class="win-ellipsis">22</div>
        </li>
        <li role="button" tabindex="0" class="win-picker-column__item" style="height: 44px;">
          <div class="win-ellipsis">23</div>
        </li>
      </ul>
    </div>
    <div class="win-picker-column">
      <ul class="win-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="win-picker-column__item win-picker-column__item--selected" style="height: 44px;">
          <div class="win-ellipsis">58</div>
        </li>
        <li role="button" tabindex="0" class="win-picker-column__item" style="height: 44px;">
          <div class="win-ellipsis">59</div>
        </li>
      </ul>
    </div>
    <div class="win-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="win-hairline-unset--top-bottom win-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`formatter prop 1`] = `
<div class="win-picker">
  <div class="win-picker__toolbar"><button type="button" class="win-picker__cancel">取消</button><button type="button" class="win-picker__confirm">确认</button></div>
  <!---->
  <div class="win-picker__columns" style="height: 220px;">
    <div class="win-picker-column">
      <ul class="win-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="win-picker-column__item win-picker-column__item--selected" style="height: 44px;">
          <div class="win-ellipsis">00 hour</div>
        </li>
        <li role="button" tabindex="0" class="win-picker-column__item" style="height: 44px;">
          <div class="win-ellipsis">05 hour</div>
        </li>
        <li role="button" tabindex="0" class="win-picker-column__item" style="height: 44px;">
          <div class="win-ellipsis">10 hour</div>
        </li>
        <li role="button" tabindex="0" class="win-picker-column__item" style="height: 44px;">
          <div class="win-ellipsis">15 hour</div>
        </li>
        <li role="button" tabindex="0" class="win-picker-column__item" style="height: 44px;">
          <div class="win-ellipsis">20 hour</div>
        </li>
      </ul>
    </div>
    <div class="win-picker-column">
      <ul class="win-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="win-picker-column__item win-picker-column__item--selected" style="height: 44px;">
          <div class="win-ellipsis">00 minute</div>
        </li>
        <li role="button" tabindex="0" class="win-picker-column__item" style="height: 44px;">
          <div class="win-ellipsis">10 minute</div>
        </li>
        <li role="button" tabindex="0" class="win-picker-column__item" style="height: 44px;">
          <div class="win-ellipsis">20 minute</div>
        </li>
        <li role="button" tabindex="0" class="win-picker-column__item" style="height: 44px;">
          <div class="win-ellipsis">30 minute</div>
        </li>
        <li role="button" tabindex="0" class="win-picker-column__item" style="height: 44px;">
          <div class="win-ellipsis">40 minute</div>
        </li>
        <li role="button" tabindex="0" class="win-picker-column__item" style="height: 44px;">
          <div class="win-ellipsis">50 minute</div>
        </li>
      </ul>
    </div>
    <div class="win-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="win-hairline-unset--top-bottom win-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`max-hour & max-minute 1`] = `
<div class="win-picker">
  <div class="win-picker__toolbar"><button type="button" class="win-picker__cancel">取消</button><button type="button" class="win-picker__confirm">确认</button></div>
  <!---->
  <div class="win-picker__columns" style="height: 220px;">
    <div class="win-picker-column">
      <ul class="win-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="win-picker-column__item win-picker-column__item--selected" style="height: 44px;">
          <div class="win-ellipsis">00</div>
        </li>
        <li role="button" tabindex="0" class="win-picker-column__item" style="height: 44px;">
          <div class="win-ellipsis">01</div>
        </li>
        <li role="button" tabindex="0" class="win-picker-column__item" style="height: 44px;">
          <div class="win-ellipsis">02</div>
        </li>
      </ul>
    </div>
    <div class="win-picker-column">
      <ul class="win-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="win-picker-column__item win-picker-column__item--selected" style="height: 44px;">
          <div class="win-ellipsis">00</div>
        </li>
        <li role="button" tabindex="0" class="win-picker-column__item" style="height: 44px;">
          <div class="win-ellipsis">01</div>
        </li>
        <li role="button" tabindex="0" class="win-picker-column__item" style="height: 44px;">
          <div class="win-ellipsis">02</div>
        </li>
      </ul>
    </div>
    <div class="win-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="win-hairline-unset--top-bottom win-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;
